--- a/css/base.css
+++ b/css/base.css
@@ -69,10 +69,10 @@ b, strong { font-weight: bold }
 i, em { font-style: italic}
 
 a {
-    color: inherit;
+    color: #248cc8;
     text-decoration: none;
     padding: 0 0.1em;
-    background: rgba(255,255,255,0.5);
+    background: rgba(255,255,255,0);
     text-shadow: -1px -1px 2px rgba(100,100,100,0.9);
     border-radius: 0.2em;
 
@@ -84,7 +84,8 @@ a {
 }
 
 a:hover {
-    background: rgba(255,255,255,1);
+    color: #f47e3c;
+    background: rgba(255,255,255,0);
     text-shadow: -1px -1px 2px rgba(100,100,100,0.5);
 }
 
